Recursos comprometidos y pagados por contrato  Fuentes y usos

--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-inter-validar-requisitos/expansion-inter-validar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-inter-validar-requisitos/expansion-inter-validar-requisitos.component.html
@@ -128,7 +128,7 @@
                 class="text-area-quill--label size-label"
                 [class.colorMainColor]="perfil['verificarObservacion'] !== null"
               >
-                Observaciones a las hojas de vida del contratista de interventoria
+                Observaciones a las hojas de vida del contratista de interventoría
               </label>
               <quill-editor
                 class="quill-editor-style miles"
