--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-balance/aprobar-balance.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-balance/aprobar-balance.component.html
@@ -19,7 +19,7 @@
         <b> {{ data.numeroContratoObra }} </b>
       </span>
       <span class="mx-1em">
-        Número de contrato de interventoria:
+        Número de contrato de interventoría:
         <b> {{ data.numeroContratoInterventoria }} </b>
       </span>
     </p>
