--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-accord-gbftrec/recursos-comprom-accord-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-accord-gbftrec/recursos-comprom-accord-gbftrec.component.html
@@ -25,4 +25,4 @@
     </table>
     <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
 </div>
-<app-fuentes-usos-gbftrec></app-fuentes-usos-gbftrec>
+<app-fuentes-usos-gbftrec *ngIf="contratoId" [contratoId]="contratoId"></app-fuentes-usos-gbftrec>
