--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/ejecucion-financiera-gtlc/ejecucion-financiera-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/ejecucion-financiera-gtlc/ejecucion-financiera-gtlc.component.html
@@ -7,7 +7,7 @@
     <h1 class="title-menu--h1">Ejecución financiera por componente {{ data.llaveMen }}</h1>
     <p class="info-sub-title">
         <span>Número de contrato de obra: <b>{{ data.numeroContratoObra }} </b></span>
-        <span>Número de contrato de interventoria: <b>{{ data.numeroContratoInterventoria }}</b></span>
+        <span>Número de contrato de interventoría: <b>{{ data.numeroContratoInterventoria }}</b></span>
     </p>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
