--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/traslado-recursos-gtlc/traslado-recursos-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/traslado-recursos-gtlc/traslado-recursos-gtlc.component.html
@@ -10,7 +10,7 @@
       </h1>
       <p class="colorMainColor mt-1em">
         <span class="mx-1em"> Número de contrato de obra: <b> {{ proyecto.numeroContratoObra }} </b> </span>
-        <span class="mx-1em"> Número de contrato de interventoria: <b> {{ proyecto.numeroContratoInterventoria }} </b> </span>
+        <span class="mx-1em"> Número de contrato de interventoría: <b> {{ proyecto.numeroContratoInterventoria }} </b> </span>
       </p>
     </div>
   
