--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/ejecucion-financiera-rlc/ejecucion-financiera-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/ejecucion-financiera-rlc/ejecucion-financiera-rlc.component.html
@@ -7,7 +7,7 @@
     <h1 class="title-menu--h1">Ejecución financiera por componente LL457326</h1>
     <p class="info-sub-title">
         <span>Número de contrato de obra: <b>N801801</b></span>
-        <span>Número de contrato de interventoria: <b>A513513</b></span>
+        <span>Número de contrato de interventoría: <b>A513513</b></span>
     </p>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
