--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/recursos-compro-pagados-rlc/recursos-compro-pagados-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/recursos-compro-pagados-rlc/recursos-compro-pagados-rlc.component.html
@@ -7,7 +7,7 @@
     <h1 class="title-menu--h1">Recursos comprometidos y pagados LL457326</h1>
     <p class="info-sub-title">
         <span>Número de contrato de obra: <b>N801801</b></span>
-        <span>Número de contrato de interventoria: <b>A513513</b></span>
+        <span>Número de contrato de interventoría: <b>A513513</b></span>
     </p>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
@@ -55,7 +55,7 @@
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
-                    Contrato de interventoria A513513
+                    Contrato de interventoría A513513
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-accordion>
