--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-editar-expensas/ver-detalle-editar-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-editar-expensas/ver-detalle-editar-expensas.component.html
@@ -11,7 +11,7 @@
     </section>
     <p class="info-sub-title supportBlack">
         <span *ngIf="solicitudPago.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra">Tipo de solicitud: <b>Contratos de obra</b></span>
-        <span *ngIf="solicitudPago.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo de solicitud: <b>Contratos de interventoria</b></span>
+        <span *ngIf="solicitudPago.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo de solicitud: <b>Contratos de interventoría</b></span>
         <span *ngIf="solicitudPago.tipoSolicitudCodigo === tipoSolicitudCodigo.expensas">Tipo de solicitud: <b>Expensas</b></span>
         <span *ngIf="solicitudPago.tipoSolicitudCodigo === tipoSolicitudCodigo.otrosCostos">Tipo de solicitud: <b>Otros costos/servicios</b></span>
     </p>
