--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
@@ -16,7 +16,7 @@
         Número de contrato de obra: <b> N000000 </b>
       </span>
       <span class="mx-1em">
-        Número de contrato de interventoria: <b> A000000 </b>
+        Número de contrato de interventoría: <b> A000000 </b>
       </span>
     </p>
   </div>
