--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/home/home.component.html
@@ -47,10 +47,10 @@
             [class.en-proceso]="false"
             [class.completo]="false"
           >
-          Liquidación de contrato de interventoria
+          Liquidación de contrato de interventoría
           </mat-panel-title>
         </mat-expansion-panel-header>
-        Liquidación de contrato de interventoria
+        Liquidación de contrato de interventoría
       </mat-expansion-panel>
     </mat-accordion>
   </div>
