--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
@@ -8,7 +8,7 @@
     <h1 class="title-menu--h1">Recursos comprometidos y pagados LL457326</h1>
     <p class="colorMainColor mt-1em">
       <span class="mx-1em"> Número de contrato de obra: <b> N801801 </b> </span>
-      <span class="mx-1em"> Número de contrato de interventoria: <b> A513513 </b> </span>
+      <span class="mx-1em"> Número de contrato de interventoría: <b> A513513 </b> </span>
     </p>
   </div>
 
