--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/resumen-p/resumen-p.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/resumen-p/resumen-p.component.html
@@ -97,13 +97,13 @@
       </p>
       <p>
         <strong>
-          Plazo de interventoria:
+          Plazo de interventoría:
         </strong>
         Meses: 01 Días:10
       </p>
       <p>
         <strong>
-          Valor de interventoria:
+          Valor de interventoría:
         </strong>
         $5.000.000
       </p>
