--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/ver-detalle-autorizar-solicitud/ver-detalle-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/ver-detalle-autorizar-solicitud/ver-detalle-autorizar-solicitud.component.html
@@ -14,7 +14,7 @@
                 solicitud: <b>Contratos de obra</b></span>
             <span
                 *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo
-                de solicitud: <b>Contratos de interventoria</b></span>
+                de solicitud: <b>Contratos de interventoría</b></span>
         </p>
 
         <mat-card class="shipping-card var-main-gris">
@@ -25,7 +25,7 @@
                         de obra</span>
                     <span
                         *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Contratos
-                        de interventoria</span>
+                        de interventoría</span>
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content style="text-align: left;">
