--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-acta-ini-f-i-prc/ver-detalle-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-acta-ini-f-i-prc/ver-detalle-acta-ini-f-i-prc.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div *ngIf="this.tipoCodigo == '1' && this.opcion == 1">
                     <!--
-                        Campos pendientes - No se puede traer la informacion del representante legal de interventoria y obra
+                        Campos pendientes - No se puede traer la informacion del representante legal de interventoría y obra
                         <p><strong>Número de identificación del representante legal del contratista de inteventoría:
                         </strong></p>
                         <p><strong>Nombre del representante legal del contratista de interventoría:
@@ -53,7 +53,7 @@
                 </div>
                 <div *ngIf="this.tipoCodigo == '1' && this.opcion == 2">
                     <!--
-                        Campos pendientes - No se puede traer la informacion del representante legal de interventoria y obra
+                        Campos pendientes - No se puede traer la informacion del representante legal de interventoría y obra
                         <p><strong>Número de identificación del representante legal del contratista de inteventoría:
                         </strong></p>
                         <p><strong>Nombre del representante legal del contratista de interventoría:
