--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/fuentes-usos-gbftrec/fuentes-usos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/fuentes-usos-gbftrec/fuentes-usos-gbftrec.component.html
@@ -1,63 +1,95 @@
-<mat-card class="shipping-card mainGris" style="margin-top: 3em;">
-    <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text textoGris">
-            Fuentes y usos
-        </mat-card-title>
-    </mat-card-header>
-    <mat-card-content style="text-align: left;">
-        <div class="table-responsive text-center">
-            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<mat-card class="shipping-card mainGris" style="margin-top: 3em">
+  <mat-card-header class="header-card header-card--margin">
+    <mat-card-title class="header-card--text textoGris"> Fuentes y usos </mat-card-title>
+  </mat-card-header>
+  <mat-card-content style="text-align: left">
 
-                <ng-container matColumnDef="aportante">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
-                    <td mat-cell *matCellDef="let element"> <b>{{element.aportante}}</b></td>
-                </ng-container>
-                <ng-container matColumnDef="valorAportante">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
-                    <td mat-cell *matCellDef="let element"> <b>{{element.valorAportante}}</b></td>
-                </ng-container>
-                <ng-container matColumnDef="fuenteAportante">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuente </th>
-                    <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                        <div class="sub-item-table justify-content-center align-items-center"
-                            *ngFor="let el of element.fuenteAportante ; let i = index">
-                            <div [ngClass]="{'h-3em': el.uso.length==1, 'h-6em': el.uso.length>1}"
-                                style="margin-top: 1em;">
-                                {{el.fuente}}
-                            </div>
-                        </div>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="uso">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Uso </th>
-                    <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                        <div class="sub-item-table justify-content-center align-items-center"
-                            *ngFor="let el of element.fuenteAportante ; let i = index">
-                            <div *ngFor="let el2 of el.uso ; let j = index">
-                                <div class="h-3em">
-                                    {{el2.nombre}}
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="valorUso">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor uso </th>
-                    <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                        <div class="sub-item-table justify-content-center align-items-center"
-                            *ngFor="let el of element.fuenteAportante ; let i = index">
-                            <div *ngFor="let el2 of el.valorUso ; let j = index">
-                                <div class="h-3em" >
-                                    {{el2.valor}}
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-            <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
-        </div>
-    </mat-card-content>
+    <section class="d-flex justify-content-center table-responsive tabla-gris mt-3em">
+      <table mat-table [dataSource]="dataSource" matSort style="width: 90%">
+        <ng-container matColumnDef="uso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 28%">Uso</th>
+          <td mat-cell *matCellDef="let element; index as i" align="center">{{ element.nombreUso }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="fuente">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%">Fuente</th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            align="center"
+            class="color-text"
+            class="padding-0em border-color-detalle"
+          >
+            <div
+              class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"
+              *ngFor="let el of element.fuentes; let i = index"
+            >
+              {{ el.nombreFuente }}
+            </div>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="aportante">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%">
+            Aportante
+          </th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            align="center"
+            class="color-text"
+            class="padding-0em border-color-detalle"
+          >
+            <div
+              class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"
+              *ngFor="let el of element.aportante; let i = index"
+            >
+              {{ el.nombreAportante }}
+            </div>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="valorUso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 15%">Valor de Uso</th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            align="center"
+            class="color-text"
+            class="padding-0em border-color-detalle"
+          >
+            <div
+              class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"
+              *ngFor="let el of element.valorUso; let i = index"
+            >
+              ${{ el }}
+            </div>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="saldoActualUso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%">
+            Saldo actual de uso
+          </th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            align="center"
+            class="color-text"
+            class="padding-0em border-color-detalle"
+          >
+            <div
+              class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"
+              *ngFor="let el of element.saldoActualUso; let i = index"
+            >
+              ${{ el }}
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </section>
+  </mat-card-content>
 </mat-card>
