--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/gestionar-tramite-liq-contractual/gestionar-tramite-liq-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/gestionar-tramite-liq-contractual/gestionar-tramite-liq-contractual.component.html
@@ -33,7 +33,7 @@
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title" [ngClass]="estadoAcordeonInterventoria">
-                    Liquidación de contrato de interventoria
+                    Liquidación de contrato de interventoría
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <app-tabla-liquidacion-intervn-gtlc (estadoSemaforo)="estadoAcordeonInterventoria = $event"></app-tabla-liquidacion-intervn-gtlc>
