--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/recursos-compro-pagados-gtlc/recursos-compro-pagados-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/recursos-compro-pagados-gtlc/recursos-compro-pagados-gtlc.component.html
@@ -7,7 +7,7 @@
     <h1 class="title-menu--h1">Recursos comprometidos y pagados  {{ data.llaveMen }}</h1>
     <p class="info-sub-title">
         <span>Número de contrato de obra: <b>{{ data.numeroContratoObra }}</b></span>
-        <span>Número de contrato de interventoria: <b>{{ data.numeroContratoInterventoria }}</b></span>
+        <span>Número de contrato de interventoría: <b>{{ data.numeroContratoInterventoria }}</b></span>
     </p>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
@@ -55,7 +55,7 @@
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
-                    Contrato de interventoria &nbsp;<span *ngIf="contratoInterventoria">{{ contratoInterventoria.numeroContrato }}</span>
+                    Contrato de interventoría &nbsp;<span *ngIf="contratoInterventoria">{{ contratoInterventoria.numeroContrato }}</span>
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-accordion>
