--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
@@ -9,7 +9,7 @@
     <p class="colorMainColor mt-1em">
       <span class="mx-1em"> Llave MEN: <b> LL000000 </b> </span>
       <span class="mx-1em"> Número de contrato de obra: <b> N000000 </b> </span>
-      <span class="mx-1em"> Número de contrato de interventoria: <b> A000000 </b> </span>
+      <span class="mx-1em"> Número de contrato de interventoría: <b> A000000 </b> </span>
     </p>
   </div>
 
