--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/expansion-panel/expansion-panel.component.html
@@ -17,7 +17,7 @@
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title" [ngClass]="estadoAcordeonInterventoria">
-          Liquidación de contrato de interventoria
+          Liquidación de contrato de interventoría
         </mat-panel-title>
       </mat-expansion-panel-header>
       <app-tabla-liquidacion-contrato-interventoria (estadoSemaforo)="estadoAcordeonInterventoria = $event"></app-tabla-liquidacion-contrato-interventoria>
