--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
@@ -15,7 +15,7 @@
         <b> {{ data.numeroContratoObra }} </b>
       </span>
       <span class="mx-1em">
-        Número de contrato de interventoria:
+        Número de contrato de interventoría:
         <b> {{ data.numeroContratoInterventoria }} </b>
       </span>
     </p>
@@ -93,7 +93,7 @@
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title">
-          Contrato de interventoria &nbsp;<span *ngIf="contratoInterventoria">{{ contratoInterventoria.numeroContrato }}</span>
+          Contrato de interventoría &nbsp;<span *ngIf="contratoInterventoria">{{ contratoInterventoria.numeroContrato }}</span>
       </mat-panel-title>
       </mat-expansion-panel-header>
       <mat-accordion>
