--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -9,7 +9,7 @@
     </h1>
     <p class="info-sub-title supportBlack">
         <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra">Tipo de solicitud: <b>Contratos de obra</b></span>
-        <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo de solicitud: <b>Contratos de interventoria</b></span>
+        <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo de solicitud: <b>Contratos de interventoría</b></span>
         <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.otrosCostos">Tipo de solicitud: <b>Otros costos/servicios</b></span>
     </p>
     <ng-container *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo !== tipoSolicitudCodigo.otrosCostos; else esOtrosCostos">
@@ -18,7 +18,7 @@
                 <mat-card-header class="header-card header-card--margin">
                     <mat-card-title class="header-card--text textoGris">
                         <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra"> Contratos de obra </span>
-                        <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria"> Contratos de interventoria </span>
+                        <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria"> Contratos de interventoría </span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content style="text-align: left;">
