--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/validar-balance/validar-balance.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/validar-balance/validar-balance.component.html
@@ -14,7 +14,7 @@
         Número de contrato de obra: <b> N801801 </b>
       </span>
       <span class="mx-1em">
-        Número de contrato de interventoria: <b> A513513 </b>
+        Número de contrato de interventoría: <b> A513513 </b>
       </span>
     </p>
   </div>
