--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/ver-ejecucion-financiera/ver-ejecucion-financiera.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/ver-ejecucion-financiera/ver-ejecucion-financiera.component.html
@@ -11,7 +11,7 @@
     </h1>
     <p class="colorMainColor mt-1em">
       <span class="mx-1em"> Número de contrato de obra: <b> N801801 </b> </span>
-      <span class="mx-1em"> Número de contrato de interventoria: <b> A513513 </b> </span>
+      <span class="mx-1em"> Número de contrato de interventoría: <b> A513513 </b> </span>
     </p>
   </div>
 
