--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro/form-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro/form-orden-giro.component.html
@@ -7,7 +7,7 @@
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                 <ng-container matColumnDef="tipoSolicitudGiro">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de solicitud </th>
-                    <td mat-cell *matCellDef="let element" align="center"> {{ getTipoSolicitud( element.get( 'tipoSolicitudGiro' ).value ) }} </td>
+                    <td mat-cell *matCellDef="let element" align="center"> {{ element.get( 'tipoSolicitudGiro' ).value }} </td>
                 </ng-container>
                 <ng-container matColumnDef="fechaAprobacionFiduciaria">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de aprobación fiduciaria </th>
@@ -23,7 +23,7 @@
                 </ng-container>
                 <ng-container matColumnDef="modalidadContrato">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Modalidad del contrato </th>
-                    <td mat-cell *matCellDef="let element" align="center"> {{ getModalidadContrato( element.get( 'modalidadContrato' ).value ) }} </td>
+                    <td mat-cell *matCellDef="let element" align="center"> {{ element.get( 'modalidadContrato' ).value }} </td>
                 </ng-container>
                 <ng-container matColumnDef="numeroContrato">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
