--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -99,17 +99,17 @@
     <mat-card-content>
       <p>
         <strong>Nombre del contratista:</strong>
-        {{ contrato?.contratacion.contratista.nombre }}
+        {{ contrato?.contratacion?.contratista?.nombre }}
       </p>
       <p>
         <strong>Tipo de identificación:</strong>
         <span>
-          {{ contrato?.contratacion.contratista.tipoIdentificacionNotMapped }}
+          {{ contrato?.contratacion?.contratista?.tipoIdentificacionNotMapped }}
         </span>
       </p>
       <p>
         <strong>Número de identificación</strong>
-        {{ contrato?.contratacion.contratista.numeroIdentificacion }}
+        {{ contrato?.contratacion?.contratista?.numeroIdentificacion }}
       </p>
       <!-- <p>
         <strong>Tipo de intervención:</strong>
