--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
@@ -66,7 +66,7 @@
                                         Fecha de expedición de la actualización de la póliza
                                 </label>
                             </div>
-                            <div class="col d-flex align-items-center">
+                            <div class="col d-flex">
                                 <mat-form-field class="example-full-width">
                                     <input  matInput
                                             formControlName="fechaExpedicion"
@@ -85,16 +85,16 @@
                                         class="btn-calendario">
                                         <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
                                 </button>
+                                <span class="icon-incompleto">
+                                    <img    class="icon-incompleto--img"
+                                            src="assets/img/icon/incompleto.svg"
+                                            alt="este campo es requerido"
+                                            [matTooltipPosition]="'above'"
+                                            matTooltip="Debe ingresar la información en el campo para continuar"
+                                            matTooltipClass="info-tooltip"
+                                            *ngIf="(addressForm.get('fechaExpedicion')?.invalid && addressForm.get('fechaExpedicion').touched) || (addressForm.get('fechaExpedicion')?.invalid && estaEditando)">
+                                </span>
                             </div>
-                            <span class="icon-incompleto">
-                                <img    class="icon-incompleto--img"
-                                        src="assets/img/icon/incompleto.svg"
-                                        alt="este campo es requerido"
-                                        [matTooltipPosition]="'above'"
-                                        matTooltip="Debe ingresar la información en el campo para continuar"
-                                        matTooltipClass="info-tooltip"
-                                        *ngIf="(addressForm.get('fechaExpedicion')?.invalid && addressForm.get('fechaExpedicion').touched) || (addressForm.get('fechaExpedicion')?.invalid && estaEditando)">
-                            </span>
                         </div>
                     </div>
                 </div>
