--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-general-rapg/tabla-general-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-general-rapg/tabla-general-rapg.component.html
@@ -20,7 +20,7 @@
       <td mat-cell *matCellDef="let element" align="center">{{ element.numeroContrato }}</td>
     </ng-container>
     <ng-container matColumnDef="nombreContratista">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Contratista</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre del contratista</th>
       <td mat-cell *matCellDef="let element" align="center">{{ firstLetterUpperCase(element.nombreContratista) }}</td>
     </ng-container>
     <ng-container matColumnDef="numeroPoliza">
