--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.scss
@@ -10,7 +10,7 @@
         box-shadow: none;
         border: solid 1px #fff;
 
-        @media only screen and (max-width: 1023px) {
+        @media only screen and (max-width: 24em) {
           width: 100%;
         }
   
@@ -26,7 +26,7 @@
       box-shadow: none;
       border: solid 1px #fff;
 
-      @media only screen and (max-width: 1023px) {
+      @media only screen and (max-width: 24em) {
         width: 100%;
       }
 
