--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
@@ -190,12 +190,7 @@
                                 color="warn"
                                 class="btn-guardar"
                                 type="submit"
-                                [disabled]="
-                                    !seguro.dirty ||
-                                    seguro.get('fechaSeguro')?.invalid ||
-                                    seguro.get('fechaAmparo')?.invalid ||
-                                    seguro.get('valorAmparo')?.invalid
-                                "
+                                [disabled]="!seguro.dirty"
                             >
                                 <img src="assets/img/icon/guardar.svg" alt="Regresar">
                         </button>
