--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-lista-contratos/tabla-lista-contratos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-lista-contratos/tabla-lista-contratos.component.html
@@ -1,19 +1,19 @@
 <section class="d-flex justify-content-center">
     <div class="table-responsive" style="width: 70%;">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            <ng-container matColumnDef="numContrato">
+            <ng-container matColumnDef="numeroContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de contrato </th>
                 <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.numeroContrato }}</b> </td>
             </ng-container>
-            <ng-container matColumnDef="tipoContrato">
+            <ng-container matColumnDef="tipoSolicitudCodigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de contrato </th>
                 <td mat-cell *matCellDef="let element" align="center"> <em>{{ getTipoSolicitudContrato( element.tipoSolicitudCodigo ) }}</em> </td>
             </ng-container>
-            <ng-container matColumnDef="contratista">
+            <ng-container matColumnDef="nombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Contratista </th>
                 <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.nombre }}</em> </td>
             </ng-container>
-            <ng-container matColumnDef="gestion">
+            <ng-container matColumnDef="contratoPolizaId">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
                     <button mat-raised-button
