--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-general-rapg/tabla-general-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-general-rapg/tabla-general-rapg.component.html
@@ -59,7 +59,10 @@
           color="accent"
           class="btn-table"
           [routerLink]="['verDetalleEditarPoliza', element.contratoPolizaId]"
-          *ngIf="estadosActualizacionPoliza.enRevisionActualizacionPoliza === element.estadoActualizacion"
+          *ngIf="
+            estadosActualizacionPoliza.enRevisionActualizacionPoliza === element.estadoActualizacion ||
+            getEstadoRegistro(element.estadoActualizacion) == 'Con póliza observada y devuelta'
+          "
         >
           Ver detalle/Editar
         </button>
