--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
@@ -56,6 +56,7 @@
     <app-control-solicitudes-traslado-gbftrec   [proyectoId]="proyectoId"
                                                 [esRegistroNuevo]="esRegistroNuevo"
                                                 [proyecto]="proyecto"
-                                                [esVerDetalle]="esVerDetalle">
+                                                [esVerDetalle]="esVerDetalle"
+                                                [solicitudPagoId]="solicitudPagoId">
     </app-control-solicitudes-traslado-gbftrec>
 </section>
